--- a/package.json
+++ b/package.json
@@ -11,24 +11,23 @@
     "prebuild": "bun run type-check"
   },
   "dependencies": {
-    "next": "15.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@cosmicjs/sdk": "^1.5.5",
     "marked": "^12.0.0",
-    "dompurify": "^3.0.5",
-    "isomorphic-dompurify": "^2.9.0"
+    "isomorphic-dompurify": "^2.9.0",
+    "next": "15.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/dompurify": "^3.0.5",
-    "typescript": "^5.0.0",
-    "eslint": "^8.57.0",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
     "eslint-config-next": "15.1.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
